grpc-envoy-rellenable/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 } # Puerto entrada REST
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: grpc_json
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: 
                  cluster: grpc_service
                  timeout: 60s
          http_filters:
          # -----------------------------------------------------------------
          # FILTRO JSON TRANSCODER
          # Convierte HTTP/JSON -> gRPC y viceversa
          # -----------------------------------------------------------------
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: "/etc/envoy/proto.pb"   # El archivo binario compilado
              services: ["ecommerce.OrderService"]      # Nombre exacto package.Service
              
              # Opciones de formato JSON
              print_options:
                add_whitespace: true                    # JSON "bonito" con saltos de línea
                always_print_primitive_fields: true     # Muestra campos aunque sean 0 o false
                always_print_enums_as_ints: false       # Muestra "PENDING" en vez de 0
                preserve_proto_field_names: true        # Usa snake_case (product_id)
              
              # Configuración estricta de rutas
              match_incoming_request_route: false
              ignore_unknown_query_parameters: true

          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: grpc_service
    connect_timeout: 1.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    
    # Esta opción fuerza a Envoy a usar HTTP/2 para hablar con el backend Java
    # Es obligatorio para que gRPC funcione.
    http2_protocol_options: {}
    
    load_assignment:
          cluster_name: grpc_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    # ANTES: address: java-app
                    # AHORA: Usamos el DNS especial de Docker para ver el host
                    address: host.docker.internal 
                    port_value: 9090
